--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HANIL</title>
     
-    <!-- // Add the new slick-theme.css if you want the default styling -->
-    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+    <!-- 파비콘 -->
+    <link rel="shortcunt icon" href="./images/아이콘/파비콘.svg">
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
     
@@ -43,7 +43,9 @@
     <header class="main-header container">
 
         <div class="logo">
-            <img src="./images/한일제약-logo.svg" alt="logo">
+            <a href="index.html">
+                <img src="./images/한일제약-logo.svg" alt="logo">
+            </a>
         </div>
 
         <nav id="gnb">
@@ -71,13 +73,13 @@
                         </li>
                     </ul>
                 </li>
-                <li><a href="#">채용공고</a>
+                <li><a href="recruit.html">채용공고</a>
                     <ul class="sub-menu">
                         <li>
-                            <a href="#">채용안내</a>
+                            <a href="recruit.html">채용안내</a>
                         </li>
                         <li>
-                            <a href="#">인재상</a>
+                            <a href="recruit">인재상</a>
                         </li>
                     </ul>
                 </li>
