--- a/index.html
+++ b/index.html
@@ -99,8 +99,6 @@
                     <img src="./images/아이콘/global.svg" alt="">
                     <p class="v-slash"><span>|</span></p>
                 </div>
-
-                
     
                 <!-- pc toggle -->
                 <button id="sitemap-toggle-btn" class="pc-only">
@@ -450,11 +448,20 @@
                     </ul>
                 </div>
                 <div class="footer-info">
-                    <p>
+                    <ul>
+                        <li>
+                            Tel: 031-798-7161~2 <span>|</span>
+                        </li>
+                        <li>
+                            Fax: 031-798-7163 
+                            <span>|</span>
+                        </li>
+                    </ul>
+                    <!-- <p>
                         Tel: 031-798-7161~2 <span>|</span>
                         Fax: 031-798-7163 <span>|</span>
                         사업장주소 : 경기도 광주시 도척면 도척로 584번길 29
-                    </p>
+                    </p> -->
                     <p class="copy">
                         Copyright ⓒ 2008 by HANIL. All rights reserved.
                     </p>
