--- a/recruit.html
+++ b/recruit.html
@@ -160,13 +160,13 @@
                 <div class="sub-tab-menu">
                     <ul>
                         <li>
-                            <a href="#">HOME</a>
+                            <a href="index.html">HOME</a>
                         </li>
                         <li>
-                            <a href="#">채용안내</a>
+                            <a href="recruit.html">채용안내</a>
                         </li>
                         <li>
-                            <a href="#">인재상</a>
+                            <a href="talent.html">인재상</a>
                         </li>
                     </ul>
                 </div>
@@ -189,7 +189,9 @@
                         <ul class="recruit-guide-wrap">
                             <li>
                                 <div class="guide-tab-icon">
-                                    <img src="./images/아이콘/입사지원아이콘.png" alt="입사지원">
+                                    <a href="#">
+                                        <img src="./images/아이콘/입사지원아이콘.png" alt="입사지원">
+                                    </a>
                                 </div>
                                     <div class="guide-tab-text">
                                         <h3>입사지원</h3>
@@ -200,7 +202,9 @@
                             </li>
                             <li>
                                 <div class="guide-tab-icon">
-                                    <img src="./images/아이콘/서류지원아이콘.png" alt="서류지원">
+                                    <a href="#">
+                                        <img src="./images/아이콘/서류지원아이콘.png" alt="서류지원">
+                                    </a>
                                 </div>
                                     <div class="guide-tab-text">
                                         <h3>서류지원</h3>
@@ -212,7 +216,9 @@
                             </li>
                             <li>
                                 <div class="guide-tab-icon">
-                                    <img src="./images/아이콘/면접전형아이콘.png" alt="면접전형">
+                                    <a href="#">
+                                        <img src="./images/아이콘/면접전형아이콘.png" alt="면접전형">
+                                    </a>
                                 </div>
                                     <div class="guide-tab-text">
                                         <h3>면접전형</h3>
@@ -224,7 +230,9 @@
                             </li>
                             <li>
                                 <div class="guide-tab-icon">
-                                    <img src="./images/아이콘/건강검진아이콘2.png" alt="건강검진">
+                                    <a href="#">
+                                        <img src="./images/아이콘/건강검진아이콘2.png" alt="건강검진">
+                                    </a>
                                 </div>
                                     <div class="guide-tab-text">
                                         <h3>건강검진</h3>
@@ -236,7 +244,9 @@
                             </li>
                             <li>
                                 <div class="guide-tab-icon">
-                                    <img src="./images/아이콘/최종합격아이콘.png" alt="최종합격">
+                                    <a href="#">
+                                        <img src="./images/아이콘/최종합격아이콘.png" alt="최종합격">
+                                    </a>
                                 </div>
                                     <div class="guide-tab-text">
                                         <h3>최종합격</h3>
@@ -307,18 +317,22 @@
     <div class="bridge">
         <div class="prev-tab">
             <div class="prev-btn">
-                <img src="./images/아이콘/Previous-btn.svg" alt="인재상으로">
+                <a href="talent.html">
+                    <img src="./images/아이콘/bridge-Previous-btn.svg" alt="인재상으로">
+                </a>
             </div>
-            <div class="bridge-text">
+            <div class="bridge-text prev">
                 <h3>인재상</h3>
                 <p>Talent</p>
             </div>
         </div>
         <div class="next-tab">
             <div class="next-btn">
-                <img src="./images/아이콘/next-btn.svg" alt="홈으로">
+                <a href="./index.html">
+                    <img src="./images/아이콘/bridge-Next-btn.svg" alt="홈으로">
+                </a>
             </div>
-            <div class="bridge-text">
+            <div class="bridge-text next">
                 <h3>홈</h3>
                 <p>Home</p>
             </div>
@@ -350,11 +364,13 @@
                     </ul>
                 </div>
                 <div class="footer-info">
-                    <p>
-                        Tel: 031-798-7161~2 <span>|</span>
-                        Fax: 031-798-7163 <span>|</span>
-                        사업장주소 : 경기도 광주시 도척면 도척로 584번길 29
-                    </p>
+                    <ul>
+                        <li>Tel: 031-798-7161~2 <span>|</span></li>
+                        <li>Fax: 031-798-7163 <span>|</span></li>
+                        <li>사업장주소 : 경기도 광주시 도척면 도척로 584번길 29
+                        </li>
+                    </ul>
+                        
                     <p class="copy">
                         Copyright ⓒ 2008 by HANIL. All rights reserved.
                     </p>
