--- a/talent.html
+++ b/talent.html
@@ -159,13 +159,13 @@
                 <div class="sub-tab-menu">
                     <ul>
                         <li>
-                            <a href="#">HOME</a>
+                            <a href="index.html">HOME</a>
                         </li>
                         <li>
-                            <a href="#">채용안내</a>
+                            <a href="recruit.html">채용안내</a>
                         </li>
                         <li>
-                            <a href="#">인재상</a>
+                            <a href="talent.html">인재상</a>
                         </li>
                     </ul>
                 </div>
@@ -237,18 +237,22 @@
     <div class="bridge">
                 <div class="prev-tab">
                     <div class="prev-btn">
-                        <img src="./images/아이콘/Previous-btn.svg" alt="인재상으로">
+                        <a href="#">
+                            <img src="./images/아이콘/bridge-Previous-btn.svg" alt="인재상으로">
+                        </a>
                     </div>
-                    <div class="bridge-text">
+                    <div class="bridge-text prev">
                         <h3>인재상</h3>
                         <p>Talent</p>
                     </div>
                 </div>
                 <div class="next-tab">
                     <div class="next-btn">
-                        <img src="./images/아이콘/next-btn.svg" alt="홈으로">
+                        <a href="#">
+                            <img src="./images/아이콘/bridge-Next-btn.svg" alt="홈으로">
+                        </a>
                     </div>
-                    <div class="bridge-text">
+                    <div class="bridge-text next">
                         <h3>홈</h3>
                         <p>Home</p>
                     </div>
