--- a/recruit.html
+++ b/recruit.html
@@ -44,7 +44,9 @@
     <header class="main-header container">
 
         <div class="logo">
-            <img src="./images/한일제약-logo.svg" alt="logo">
+            <a href="index.html">
+                <img src="./images/한일제약-logo.svg" alt="logo">
+            </a>
         </div>
 
         <nav id="gnb">
@@ -75,10 +77,10 @@
                 <li><a href="#">채용공고</a>
                     <ul class="sub-menu">
                         <li>
-                            <a href="#">채용안내</a>
+                            <a href="recruit.html">채용안내</a>
                         </li>
                         <li>
-                            <a href="#">인재상</a>
+                            <a href="talent.html">인재상</a>
                         </li>
                     </ul>
                 </li>
