--- a/recruit.html
+++ b/recruit.html
@@ -320,7 +320,7 @@
         <div class="prev-tab">
             <div class="prev-btn">
                 <a href="talent.html">
-                    <img src="./images/아이콘/bridge-Previous-btn.svg" alt="인재상으로">
+                    <img src="../images/아이콘/bridge-Previous-btn.svg" alt="인재상으로">
                 </a>
             </div>
             <div class="bridge-text prev">
@@ -331,7 +331,7 @@
         <div class="next-tab">
             <div class="next-btn">
                 <a href="./index.html">
-                    <img src="./images/아이콘/bridge-Next-btn.svg" alt="홈으로">
+                    <img src="../images/아이콘/bridge-Next-btn.svg" alt="홈으로">
                 </a>
             </div>
             <div class="bridge-text next">
